--- a/flex/src/MinesweeperClient.mxml
+++ b/flex/src/MinesweeperClient.mxml
@@ -8,7 +8,7 @@
 		import mx.core.IVisualElement;
 		
 		private var connection:NetConnection;
-		private var gateway:String = "http://localhost:8080/amf";
+		private var gateway:String = "http://minesweeperphil.appspot.com/amf";
 		
 		private function init():void{
 			connection = new NetConnection();
