--- a/flex/src/MinesweeperClient.mxml
+++ b/flex/src/MinesweeperClient.mxml
@@ -8,23 +8,33 @@
 		import mx.core.IVisualElement;
 		
 		private var connection:NetConnection;
+		// ugh, hardcoded. it's supposed to accept 'http:/amf', but it doesn't
 		private var gateway:String = "http://minesweeperphil.appspot.com/amf";
 		
-		private function init():void{
+		// connect to the gateway, check auth
+		private function init():void {
 			connection = new NetConnection();
 			connection.connect(gateway);
-			loadBoard();
+			checkAuthorization();
 		}
 		
-		private function loadBoard():void{
+		// check auth, will redirect to login if necessary
+		private function checkAuthorization():void {
 			connection.call("minesweeper.authorized", new Responder(onResult_authorized, onFault));
 		}
-
+		
+		// authorization callback, enable click events on success
 		private function onResult_authorized(data:Object):void {
 			if(! data){
+				// wasn't logged in, send to login support handler
 				navigateToURL(new URLRequest('/login'),'_self');
 				return;
 			}
+			
+			// All the event handlers below use the onResult_render callback
+			// the AMF functions return the current minefield rendering as a result
+			
+			// setup square clicks to optionally allow mine placement
 			tiles.addEventListener(MouseEvent.CLICK, function(e:MouseEvent):void{
 				var element:IVisualElement = e.target as IVisualElement;
 				if(element is Label){
@@ -39,23 +49,30 @@
 					}
 				}
 			});
-			reset_btn.addEventListener(MouseEvent.CLICK, function(e:MouseEvent):void{
+			
+			//setup buttons
+			reset_btn.addEventListener(MouseEvent.CLICK, function(e:MouseEvent):void {
 				connection.call("minesweeper.reset", new Responder(onResult_render, onFault));
 			});
-			clear_btn.addEventListener(MouseEvent.CLICK, function(e:MouseEvent):void{
+			clear_btn.addEventListener(MouseEvent.CLICK, function(e:MouseEvent):void {
 				connection.call("minesweeper.clear", new Responder(onResult_render, onFault));
 			});
-			giveup_btn.addEventListener(MouseEvent.CLICK, function(e:MouseEvent):void{
+			giveup_btn.addEventListener(MouseEvent.CLICK, function(e:MouseEvent):void {
 				connection.call("minesweeper.giveup", new Responder(onResult_render, onFault));
 			});
+			
+			// get the initial rendering
 			connection.call("minesweeper.render", new Responder(onResult_render, onFault));
 		}
 		
+		// Minefield rendering code
+		// Callback function for any AMF call that changes the minefield
 		private function onResult_render(data:Object):void {
 			var counter:int = 0;
 			var rows:Array = data.toString().split('\n');
 			for(var i:String in rows){
 				var row:String = rows[i];
+				// the ASCII rendering has an extra line at the end.
 				if(! row){
 					continue;
 				}
@@ -86,6 +103,7 @@
 			}
 		}
 		
+		// generic AMF error handler
 		private function onFault(data:Object):void {
 			Alert.show(data.code + ': ' + data.description );
 		}
